# wgpulings

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PR_DESCRIPTION.md  README.md  info.toml
exercises/applications/: app01.rs  app01.wgsl  app02.rs  app02.wgsl  app03.rs  app03.wgsl  app04.rs  app04.wgsl  app05.rs  app05.wgsl  app06.rs  app06.wgsl
exercises/basics/: basics01.rs  basics01.wgsl  basics02.rs  basics02.wgsl  basics03.rs  basics03.wgsl  basics04.rs  basics04.wgsl  basics05.rs  basics05.wgsl  basics05_add.wgsl  basics05_multiply.wgsl  basics05_square.wgsl
exercises/graphics/: graphics01.rs  graphics02.rs  graphics03.rs
exercises/graphics2d/: graphics2d01.rs
exercises/intro/: intro01.rs  intro02.rs  intro02.wgsl  intro03.rs  intro03.wgsl  intro04.rs  intro04.wgsl  intro1.rs  intro2.rs  intro3.rs
exercises/patterns/: patterns01.rs  patterns01.wgsl  patterns02.rs  patterns02.wgsl  patterns03.wgsl  patterns04.rs  patterns04.wgsl  patterns05.rs  patterns05.wgsl  patterns06.wgsl
exercises/perf/: perf01.rs  perf02.rs  perf02.wgsl  perf03.rs  perf03.wgsl  perf04.rs  perf04.wgsl  perf05.rs  perf05.wgsl
exercises/shaders/: shaders01.wgsl  shaders02.wgsl  shaders03.wgsl  shaders04.wgsl  shaders05.wgsl
src/: exercise.rs  main.rs  run.rs  verify.rs  watch.rs
