[package]
name = "wgpulings"
version = "0.1.0"
edition = "2021"
authors = ["wgpulings contributors"]
description = "Small exercises to get you used to reading and writing WGSL shaders and wgpu code"

[[bin]]
name = "wgpulings"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
glob = "0.3"
indicatif = "0.17"

[dev-dependencies]
wgpu = { version = "0.19", features = ["wgsl"] }
pollster = "0.3"
winit = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }
image = "0.24"
cgmath = "0.18"

[workspace]
